2022-09-13  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: added --grep-bin to specify the grep binary to be used

2022-09-11  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (usage): default port in the help text

2022-09-09  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_security_header): added --debug-headers to store the HTTP headers in the headers.txt file

2022-09-08  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): curl ignores TLS problems while retrieving headers
        * check_ssl_cert (main): curl uses --resolve if specified when retrieving HTTP headers

2022-09-07  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (parse_command_line_options): added an optional path for the X-Frame-Options header retrieval

2022-09-06  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Added --require-x-frame-options to check for the X-Frame-Options header
        * check_ssl_cert (main): Disallowing --require-hsts and --require-x-frame-options if no HTTPS is used
        * check_ssl_cert (extract_cert_attribute): Fixed a bug when parsing certificates without purpose

2022-09-02  Matteo Corti  <matteo@corti.li>

        * Makefile (CITATION.cff): rebuild if a new version was specified
        * check_ssl_cert (main): disabling nmap checks if a proxy is specified

2022-09-01  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): follow redirects when checking HSTS
        * check_ssl_cert (main): Add verbose message for HSTS

2022-08-31  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (fetch_certificate): parsing 'excessive message size' errors

2022-08-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (extract_cert_attribute): Parse UTF-8 attributes (e.g., Location, ...)

2022-08-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): nmap is now always required
        * check_ssl_cert (main): new formatting option %SIGALGO%